erDiagram
    CLIENTE ||--o{ PROYECTO : "tiene"
    PROYECTO ||--|| PRESUPUESTOS_DE_PROYECTO : "tiene"
    PRESUPUESTOS_DE_PROYECTO ||--|{DETALLES_DE_PRESUPUESTOS : "incluye"
    PROYECTO ||--o{ RECURSOS : "asigna"
    PROYECTO ||--o{ SPRINTS_DE_PROYECTOS  : "define"
    PROYECTO ||--o{ REQUERIMIENTOS_DE_PROYECTO : "contiene"
    SPRINTS_DE_PROYECTOS ||--o{REQUERIMIENTOS_DE_PROYECTO : "implementan"
    SPRINTS_DE_PROYECTOS ||--o{COLABORADORES : "participan"
    PROYECTO }o--o{ COLABORADORES : "participan"
    SERVICIOS_ADICIONALES}o--|| DETALLES_DE_PRESUPUESTOS : "tiene"



    CLIENTE {
        int id_cliente PK
        int numero_cliente
        string email_cliente
        string empresa_cliente
        string rfc_cliente
    }

    PROYECTO {
        int id_proyecto PK
        int id_cliente_fk FK
        int id_presupuesto_fk FK
        string nombre_proyecto
        string descripcion_proyecto
        string complejidad_proyecto
        date fecha_inicio_proyecto
        date fecha_fin_proyecto
        string estado_proyecto
    }

    REQUERIMIENTOS_DE_PROYECTO {
        int id_requerimiento PK
        int id_proyecto_fk FK
        int id_sprint_fk FK
        string descripcion_requerimiento
        string tipo_requerimiento
        string prioridad_requerimiento
        int horas_estimadas
    }

    PRESUPUESTOS_DE_PROYECTO {
        int id_presupuesto PK
        int id_proyecto_fk FK
        decimal total_presupuesto
        date fecha_elaboracion
        string estado_presupuesto
    }

    DETALLES_DE_PRESUPUESTOS {
        int id_detalle_presupuesto PK
        int id_presupuesto_fk FK
        string metodo_de_pago
        decimal monto_agregado
        decimal total_adicional
        decimal subtotal
        decimal iva
    }

    RECURSOS {
        int id_recurso PK
        int id_proyecto_fk FK
        int cantidad_colaboradores
        int horas_estimadas
        int horas_adicionales
        decimal tarifa_hora
    }

    SPRINTS_DE_PROYECTOS {
        int id_sprint PK
        int id_proyecto_fk FK
        string nombre_sprint
        date fecha_inicio_sprint
        date fecha_fin_sprint
        string estado_sprint
    }

    COLABORADORES {
        int id_colaborador PK
        int id_proyecto_fk FK
        int id_sprint_fk FK
        string nombre_colaborador
        string email_colaborador
        string rol_colaborador
    }

    SERVICIOS_ADICIONALES{
        int id_servicio_adicional PK
        int id_detalle_presupuesto_fk FK
        string descripcion_servicio_adicional
        decimal monto_servicio_adicional

    }